fix(wizard): fix board selection overflow

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -161,6 +161,31 @@
   justify-content: space-between;
 }
 
+.wizard--container-board {
+  width: 100%;
+  height: 500px;
+  overflow: scroll;
+  scroll-behavior: smooth;
+}
+
+.wizard--container-board::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+.wizard--container-board::-webkit-scrollbar:vertical {
+    width: 11px;
+}
+
+.wizard--container-board::-webkit-scrollbar:horizontal {
+    height: 11px;
+}
+
+.wizard--container-board::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 2px solid white; /* should match background, can't be transparent */
+    background-color: rgba(0, 0, 0, .5);
+}
+
 .wizard--container-inner {
   width: 100%;
 }
